--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "beautifulsoup4>=4.14.3",
     "fastapi>=0.128.0",
+    "httpx>=0.28.1",
     "pandas>=2.3.3",
     "requests>=2.32.5",
     "sqlalchemy>=2.0.45",
