implement login and landing page

--- a/.env.example
+++ b/.env.example
@@ -11,9 +11,7 @@ CLOUDFLARE_DATABASE_ID=
 # NextAuth Configuration
 # Run `npx auth secret` or `openssl rand -base64 32` to generate one
 AUTH_SECRET=
+AUTH_RESEND_KEY=
 
-# OAuth Providers
-GITHUB_CLIENT_ID=
-GITHUB_CLIENT_SECRET=
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+# Email Configuration
+EMAIL_FROM=no-reply@yourdomain.com
