--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "cheerio": "^1.1.2",
     "next": "16.1.1",
     "next-auth": "^5.0.0-beta.30",
+    "nodemailer": "^7.0.12",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "resend": "^6.7.0",
     "undici": "^7.18.2"
   },
   "devDependencies": {
@@ -28,6 +30,7 @@
     "@types/bcryptjs": "^3.0.0",
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
