feat: complete d1.ts implementation and replace 'any' with specific types

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "undici": "^7.18.2"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20260116.0",
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^3.0.0",
     "@types/better-sqlite3": "^7.6.13",
