--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,5 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=
 SUPABASE_SERVICE_ROLE_KEY=
 
 # Site Configuration
-NEXT_PUBLIC_VERCEL_URL=
+NEXT_PUBLIC_APP_URL=
 EMAIL_FROM=
